crates/render-derive/tests/ui/vertex_format_corrupted.stderr
error: expected identifier, found `"Float32x2"`
 --> tests/ui/vertex_format_corrupted.rs:8:10
  |
8 | #[derive(ShaderProperties)]
  |          ^^^^^^^^^^^^^^^^
  |          |
  |          expected identifier
  |          while parsing this struct
  |
  = note: this error originates in the derive macro `ShaderProperties` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier, found `"Float32x3"`
 --> tests/ui/vertex_format_corrupted.rs:8:10
  |
8 | #[derive(ShaderProperties)]
  |          ^^^^^^^^^^^^^^^^
  |          |
  |          expected identifier
  |          while parsing this struct
  |
  = note: this error originates in the derive macro `ShaderProperties` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier, found `"Float32x4"`
 --> tests/ui/vertex_format_corrupted.rs:8:10
  |
8 | #[derive(ShaderProperties)]
  |          ^^^^^^^^^^^^^^^^
  |          |
  |          expected identifier
  |          while parsing this struct
  |
  = note: this error originates in the derive macro `ShaderProperties` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive produced unparsable tokens
 --> tests/ui/vertex_format_corrupted.rs:8:10
  |
8 | #[derive(ShaderProperties)]
  |          ^^^^^^^^^^^^^^^^
